--- a/src/assets/scss/contents.scss
+++ b/src/assets/scss/contents.scss
@@ -2,9 +2,6 @@
 
 $target: #fff;
 
-body {
-  background: #537188;
-}
 .main-section {
   width: 100%;
   height: 850px;
@@ -227,7 +224,7 @@ body {
 }
 
 .swiper-slide:nth-child(5n) {
-  background-image: url("https://ik.imagekit.io/pftkogwkc5j/Kimodo/Slider/slide-3_GMohejGG4.png");
+  background-image: url("");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -239,11 +236,41 @@ body {
   position: relative;
   top: 25%;
   font-size: 50px;
+  margin: 0px 10px;
   color: #fff;
   .swiper-slide--text__h2 {
     padding-bottom: 10px;
     font-weight: 600;
     font-size: 150px;
+  }
+}
+.reverse {
+  text-align: right;
+}
+
+.swiper-button-container {
+  position: relative;
+  width: 20%;
+  margin: 0 auto;
+  .swiper-button {
+    width: 60px;
+    height: 60px;
+    position: absolute;
+    bottom: 10px;
+    margin-top: 25%;
+    border-radius: 50%;
+    border: 2px solid #e1d4bb;
+    background-color: darkblue;
+  }
+}
+.swiper-button-next:not(.swiper-button-disabled),
+.swiper-button-prev:not(.swiper-button-disabled) {
+  opacity: 1;
+}
+.swiper-button-next,
+.swiper-button-prev {
+  &:after {
+    display: none;
   }
 }
 
