--- a/src/assets/scss/contents.scss
+++ b/src/assets/scss/contents.scss
@@ -17,28 +17,30 @@ $target: #fff;
     height: 100vh;
   }
 }
+.wrapper-container {
+  width: 398px;
+  height: 200px;
+  position: relative;
+}
 .wrapper {
-  // position: absolute;
-  // left: 50%;
-  // top: 40%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  transform: translate(-50%, -50%);
+  position: absolute;
+  top: 0%;
+  // display: flex;
+  // flex-direction: column;
+  // align-items: center;
+  // justify-content: center;
+  // transform: translate(-50%, -50%);
   width: 398px;
   height: 70px;
   white-space: nowrap;
 }
 .wrapper2 {
-  top: 53%;
+  top: auto;
+  bottom: 0;
 }
 
 .focus {
   font-weight: bold;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
   font-family: Arial;
   text-transform: uppercase;
   letter-spacing: 2px;
@@ -58,16 +60,10 @@ $target: #fff;
   letter-spacing: 2px;
   font-size: 65px;
   clip: rect(0px, 70px, 75px, 0px);
-  background: linear-gradient($target, $target 0) no-repeat,
-    linear-gradient(to right, $target, $target 0) no-repeat,
-    linear-gradient(to right, $target, $target 0) bottom left no-repeat,
-    linear-gradient(to right, $target, $target 0) bottom left no-repeat,
-    linear-gradient($target, $target 0) bottom right no-repeat,
-    linear-gradient($target, $target 0) bottom right no-repeat,
-    linear-gradient($target, $target 0) top right no-repeat,
-    linear-gradient($target, $target 0) top right no-repeat;
-  background-size: 10px 2px, 2px 10px, 2px 10px, 10px 2px, 2px 10px, 10px 2px,
-    10px 2px, 2px 10px, 10px 2px;
+  background: linear-gradient($target, $target 0) no-repeat, linear-gradient(to right, $target, $target 0) no-repeat, linear-gradient(to right, $target, $target 0) bottom left no-repeat,
+    linear-gradient(to right, $target, $target 0) bottom left no-repeat, linear-gradient($target, $target 0) bottom right no-repeat, linear-gradient($target, $target 0) bottom right no-repeat,
+    linear-gradient($target, $target 0) top right no-repeat, linear-gradient($target, $target 0) top right no-repeat;
+  background-size: 10px 2px, 2px 10px, 2px 10px, 10px 2px, 2px 10px, 10px 2px, 10px 2px, 2px 10px, 10px 2px;
   color: #e1d4bb;
   padding: 5px;
   transform: translateX(0);
@@ -114,16 +110,17 @@ $target: #fff;
   }
 }
 
-.scroll-icon,
-.scroll-icon:before {
-  position: absolute;
-  left: 50%;
+.scroll-icon {
+  position: relative;
+  &:before {
+    position: absolute;
+    left: 50%;
+  }
 }
 
 .scroll-icon {
   width: 50px;
   height: 85px;
-  bottom: 20%;
   border: 2px solid #e1d4bb;
   border-radius: 28px;
   &::before {
@@ -152,10 +149,6 @@ $target: #fff;
 }
 
 .scroll-down-animation {
-  position: absolute;
-  bottom: 12%;
-  left: 52%;
-  transform: translateX(-50%);
   & > span {
     font-size: 20px;
     color: #e1d4bb;
@@ -199,8 +192,7 @@ $target: #fff;
   justify-content: center;
   border-radius: 10px;
   color: #000;
-  box-shadow: 0px 12px 12px rgba(50, 50, 71, 0.08),
-    0px 16px 24px rgba(50, 50, 71, 0.08);
+  box-shadow: 0px 12px 12px rgba(50, 50, 71, 0.08), 0px 16px 24px rgba(50, 50, 71, 0.08);
 }
 
 .swiper-slide:nth-child(1) {
