--- a/src/assets/scss/contents.scss
+++ b/src/assets/scss/contents.scss
@@ -9,6 +9,7 @@ $target: #fff;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 30px;
   height: 100vh;
   @include breakpoint(notebook) {
     height: vw(850, $design-d);
@@ -52,7 +53,7 @@ $target: #fff;
 .mask {
   position: absolute;
   left: -5px;
-  top: -2px;
+  top: -5px;
   width: 70px;
   font-family: Arial;
   font-weight: bold;
@@ -60,10 +61,16 @@ $target: #fff;
   letter-spacing: 2px;
   font-size: 65px;
   clip: rect(0px, 70px, 75px, 0px);
-  background: linear-gradient($target, $target 0) no-repeat, linear-gradient(to right, $target, $target 0) no-repeat, linear-gradient(to right, $target, $target 0) bottom left no-repeat,
-    linear-gradient(to right, $target, $target 0) bottom left no-repeat, linear-gradient($target, $target 0) bottom right no-repeat, linear-gradient($target, $target 0) bottom right no-repeat,
-    linear-gradient($target, $target 0) top right no-repeat, linear-gradient($target, $target 0) top right no-repeat;
-  background-size: 10px 2px, 2px 10px, 2px 10px, 10px 2px, 2px 10px, 10px 2px, 10px 2px, 2px 10px, 10px 2px;
+  background: linear-gradient($target, $target 0) no-repeat,
+    linear-gradient(to right, $target, $target 0) no-repeat,
+    linear-gradient(to right, $target, $target 0) bottom left no-repeat,
+    linear-gradient(to right, $target, $target 0) bottom left no-repeat,
+    linear-gradient($target, $target 0) bottom right no-repeat,
+    linear-gradient($target, $target 0) bottom right no-repeat,
+    linear-gradient($target, $target 0) top right no-repeat,
+    linear-gradient($target, $target 0) top right no-repeat;
+  background-size: 10px 2px, 2px 10px, 2px 10px, 10px 2px, 2px 10px, 10px 2px,
+    10px 2px, 2px 10px, 10px 2px;
   color: #e1d4bb;
   padding: 5px;
   transform: translateX(0);
@@ -192,7 +199,8 @@ $target: #fff;
   justify-content: center;
   border-radius: 10px;
   color: #000;
-  box-shadow: 0px 12px 12px rgba(50, 50, 71, 0.08), 0px 16px 24px rgba(50, 50, 71, 0.08);
+  box-shadow: 0px 12px 12px rgba(50, 50, 71, 0.08),
+    0px 16px 24px rgba(50, 50, 71, 0.08);
 }
 
 .swiper-slide:nth-child(1) {
