--- a/src/assets/scss/contents.scss
+++ b/src/assets/scss/contents.scss
@@ -3,94 +3,84 @@
 $target: #fff;
 
 .main-section {
+  position: relative;
   width: 100%;
   height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
   gap: 30px;
   height: 100vh;
-  @include breakpoint(notebook) {
-    height: vw(850, $design-d);
-  }
-  @include breakpoint(mobile) {
-    height: 100vh;
-  }
 }
 .wrapper-container {
   width: 398px;
   height: 200px;
-  position: relative;
-}
-.wrapper {
   position: absolute;
-  top: 0%;
-  // display: flex;
-  // flex-direction: column;
-  // align-items: center;
-  // justify-content: center;
-  // transform: translate(-50%, -50%);
-  width: 398px;
-  height: 70px;
-  white-space: nowrap;
-}
-.wrapper2 {
-  top: auto;
-  bottom: 0;
-}
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  @include breakpoint(notebook) {
+  }
+  @include breakpoint(mobile) {
+  }
+  .wrapper {
+    position: absolute;
+    top: 0%;
+    width: 100%;
+    height: 70px;
+    white-space: nowrap;
 
-.focus {
-  font-weight: bold;
-  font-family: Arial;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  font-size: 65px;
-  opacity: 0.6;
-  color: #000;
-}
+    &.wrapper2 {
+      top: auto;
+      bottom: 0;
+    }
+    .focus {
+      font-weight: bold;
+      font-family: Arial;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      font-size: 65px;
+      opacity: 0.6;
+      color: #000;
+    }
+    .mask {
+      position: absolute;
+      left: -5px;
+      top: -5px;
+      width: 70px;
+      font-family: Arial;
+      font-weight: bold;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      font-size: 65px;
+      clip: rect(0px, 70px, 75px, 0px);
+      background: linear-gradient($target, $target 0) no-repeat, linear-gradient(to right, $target, $target 0) no-repeat, linear-gradient(to right, $target, $target 0) bottom left no-repeat,
+        linear-gradient(to right, $target, $target 0) bottom left no-repeat, linear-gradient($target, $target 0) bottom right no-repeat, linear-gradient($target, $target 0) bottom right no-repeat,
+        linear-gradient($target, $target 0) top right no-repeat, linear-gradient($target, $target 0) top right no-repeat;
+      background-size: 10px 2px, 2px 10px, 2px 10px, 10px 2px, 2px 10px, 10px 2px, 10px 2px, 2px 10px, 10px 2px;
+      color: #e1d4bb;
+      padding: 5px;
+      transform: translateX(0);
+      box-sizing: border-box;
+      animation: mask 2.5s ease infinite alternate;
+    }
 
-.mask {
-  position: absolute;
-  left: -5px;
-  top: -5px;
-  width: 70px;
-  font-family: Arial;
-  font-weight: bold;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  font-size: 65px;
-  clip: rect(0px, 70px, 75px, 0px);
-  background: linear-gradient($target, $target 0) no-repeat,
-    linear-gradient(to right, $target, $target 0) no-repeat,
-    linear-gradient(to right, $target, $target 0) bottom left no-repeat,
-    linear-gradient(to right, $target, $target 0) bottom left no-repeat,
-    linear-gradient($target, $target 0) bottom right no-repeat,
-    linear-gradient($target, $target 0) bottom right no-repeat,
-    linear-gradient($target, $target 0) top right no-repeat,
-    linear-gradient($target, $target 0) top right no-repeat;
-  background-size: 10px 2px, 2px 10px, 2px 10px, 10px 2px, 2px 10px, 10px 2px,
-    10px 2px, 2px 10px, 10px 2px;
-  color: #e1d4bb;
-  padding: 5px;
-  transform: translateX(0);
-  box-sizing: border-box;
-  animation: mask 2.5s ease infinite alternate;
-}
+    .text {
+      transform: translateX(0);
+      animation: text 2.5s ease infinite alternate;
+    }
 
-.text {
-  transform: translateX(0);
-  animation: text 2.5s ease infinite alternate;
-}
-
-.mask2 {
-  right: -7px;
-  left: auto;
-  animation: mask2 2.5s ease infinite alternate;
-}
-.text2 {
-  transform: translateX(-340px);
-  animation: text2 2.5s ease infinite alternate;
+    .mask2 {
+      right: -7px;
+      left: auto;
+      animation: mask2 2.5s ease infinite alternate;
+    }
+    .text2 {
+      transform: translateX(-340px);
+      animation: text2 2.5s ease infinite alternate;
+    }
+  }
 }
 
 @keyframes mask {
@@ -117,30 +107,37 @@ $target: #fff;
   }
 }
 
-.scroll-icon {
-  position: relative;
-  &:before {
-    position: absolute;
-    left: 50%;
+.scroll-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+  padding-bottom: 30px;
+  .scroll-icon {
+    position: relative;
+    &:before {
+      position: absolute;
+      left: 50%;
+    }
   }
-}
-
-.scroll-icon {
-  width: 50px;
-  height: 85px;
-  border: 2px solid #e1d4bb;
-  border-radius: 28px;
-  &::before {
-    content: "";
-    width: 8px;
-    height: 8px;
-    border-radius: 50%;
-    background: #e1d4bb;
-    top: 6px;
-    left: 22px;
-    animation-duration: 1.8s;
-    animation-iteration-count: infinite;
-    animation-name: scroll;
+  .scroll-icon {
+    cursor: pointer;
+    width: 50px;
+    height: 85px;
+    border: 2px solid #e1d4bb;
+    border-radius: 28px;
+    &::before {
+      content: "";
+      width: 8px;
+      height: 8px;
+      border-radius: 50%;
+      background: #e1d4bb;
+      top: 6px;
+      left: 22px;
+      animation-duration: 1.8s;
+      animation-iteration-count: infinite;
+      animation-name: scroll;
+    }
   }
 }
 
@@ -199,8 +196,7 @@ $target: #fff;
   justify-content: center;
   border-radius: 10px;
   color: #000;
-  box-shadow: 0px 12px 12px rgba(50, 50, 71, 0.08),
-    0px 16px 24px rgba(50, 50, 71, 0.08);
+  box-shadow: 0px 12px 12px rgba(50, 50, 71, 0.08), 0px 16px 24px rgba(50, 50, 71, 0.08);
 }
 
 .swiper-slide:nth-child(1) {
