--- a/src/assets/scss/contents.scss
+++ b/src/assets/scss/contents.scss
@@ -55,10 +55,16 @@ $target: #fff;
       letter-spacing: 2px;
       font-size: 65px;
       clip: rect(0px, 70px, 75px, 0px);
-      background: linear-gradient($target, $target 0) no-repeat, linear-gradient(to right, $target, $target 0) no-repeat, linear-gradient(to right, $target, $target 0) bottom left no-repeat,
-        linear-gradient(to right, $target, $target 0) bottom left no-repeat, linear-gradient($target, $target 0) bottom right no-repeat, linear-gradient($target, $target 0) bottom right no-repeat,
-        linear-gradient($target, $target 0) top right no-repeat, linear-gradient($target, $target 0) top right no-repeat;
-      background-size: 10px 2px, 2px 10px, 2px 10px, 10px 2px, 2px 10px, 10px 2px, 10px 2px, 2px 10px, 10px 2px;
+      background: linear-gradient($target, $target 0) no-repeat,
+        linear-gradient(to right, $target, $target 0) no-repeat,
+        linear-gradient(to right, $target, $target 0) bottom left no-repeat,
+        linear-gradient(to right, $target, $target 0) bottom left no-repeat,
+        linear-gradient($target, $target 0) bottom right no-repeat,
+        linear-gradient($target, $target 0) bottom right no-repeat,
+        linear-gradient($target, $target 0) top right no-repeat,
+        linear-gradient($target, $target 0) top right no-repeat;
+      background-size: 10px 2px, 2px 10px, 2px 10px, 10px 2px, 2px 10px,
+        10px 2px, 10px 2px, 2px 10px, 10px 2px;
       color: #e1d4bb;
       padding: 5px;
       transform: translateX(0);
@@ -196,7 +202,8 @@ $target: #fff;
   justify-content: center;
   border-radius: 10px;
   color: #000;
-  box-shadow: 0px 12px 12px rgba(50, 50, 71, 0.08), 0px 16px 24px rgba(50, 50, 71, 0.08);
+  box-shadow: 0px 12px 12px rgba(50, 50, 71, 0.08),
+    0px 16px 24px rgba(50, 50, 71, 0.08);
 }
 
 .swiper-slide:nth-child(1) {
@@ -233,7 +240,17 @@ $target: #fff;
   background-position: center;
   background-repeat: no-repeat;
 }
-
+.slide-backgroud {
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.38);
+  }
+}
 .swiper-slide--text {
   width: 100%;
   height: auto;
@@ -263,14 +280,13 @@ $target: #fff;
     bottom: 10px;
     margin-top: 25%;
     border-radius: 50%;
-    border: 2px solid #e1d4bb;
-    background-color: darkblue;
+    color: #e1d4bb;
+    font-size: 20px;
+    border: 3px solid #e1d4bb;
+    background-color: #537188;
   }
 }
-.swiper-button-next:not(.swiper-button-disabled),
-.swiper-button-prev:not(.swiper-button-disabled) {
-  opacity: 1;
-}
+
 .swiper-button-next,
 .swiper-button-prev {
   &:after {
@@ -278,14 +294,24 @@ $target: #fff;
   }
 }
 
+.swiper-button-next.swiper-button-disabled,
+.swiper-button-prev.swiper-button-disabled {
+  opacity: 1;
+}
+
 .about-section {
   width: 100%;
-  height: 800px;
+  height: 100vh;
   .about-wrap {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 50px;
+    gap: 30px;
+    .about-content {
+      width: 100%;
+      height: 700px;
+      background-color: darkgray;
+    }
   }
 }
 
