--- a/src/assets/scss/contents.scss
+++ b/src/assets/scss/contents.scss
@@ -274,17 +274,15 @@ $target: #fff;
         padding-bottom: vw(40, $design-d);
       }
       @include breakpoint(mobile) {
-        @include font-size(M, 25px);
-        padding-bottom: vw(20, $design-m);
+        @include font-size(M, 50px);
+        text-align: center;
+        padding-bottom: vw(5, $design-m);
       }
     }
     p {
       font-size: 50px;
       @include breakpoint(notebook) {
         @include font-size(D, 50px);
-      }
-      @include breakpoint(mobile) {
-        @include font-size(M, 25px);
       }
     }
   }
@@ -305,23 +303,23 @@ $target: #fff;
       justify-content: center;
     }
     .swiper-slide:nth-child(1) {
-      background-image: url("https://images.unsplash.com/photo-1600195077909-46e573870d99?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8TGVhcm58ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60");
+      background-image: url(../images/content/slide-img1.jpeg);
     }
 
     .swiper-slide:nth-child(2n) {
-      background-image: url("https://images.unsplash.com/photo-1461896836934-ffe607ba8211?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NTl8fCVFQiU4QiVBQyVFQiVBNiVBQyVFQSVCOCVCMHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60");
+      background-image: url("../images/content/slide-img2.jpg");
     }
 
     .swiper-slide:nth-child(3n) {
-      background-image: url("https://images.unsplash.com/photo-1548126466-4470dfd3a209?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NDZ8fGFjaGlldmVtZW50c3xlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60");
+      background-image: url("../images/content/slide-img3.jpg");
     }
 
     .swiper-slide:nth-child(4n) {
-      background-image: url("https://images.unsplash.com/photo-1503551723145-6c040742065b-v2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mjd8fFBsYW58ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60");
+      background-image: url("../images/content/slide-img4.jpg");
     }
 
     .swiper-slide:nth-child(5n) {
-      background-image: url("../images/content/slide-img4.jpg");
+      background-image: url("../images/content/slide-img5.jpeg");
     }
 
     .swiper-button-container {
@@ -421,6 +419,7 @@ $target: #fff;
       width: 100%;
       height: 100%;
       border-radius: 50%;
+      border:3px solid #e1d4bb
     }
   }
   .about-content-left__introduction {
@@ -446,6 +445,9 @@ $target: #fff;
     font-size: 25px;
     line-height: 30px;
     color: #fff;
+    @include breakpoint(mobile) {
+      @include font-size(M, 18px);
+    }
   }
 }
 
@@ -536,7 +538,7 @@ $target: #fff;
       }
     }
     .title {
-      border: 1px solid #ddd;
+      border: 2px solid #e1d4bb;
       padding: 10px;
       border-radius: 3px;
       cursor: pointer;
