--- a/src/assets/scss/contents.scss
+++ b/src/assets/scss/contents.scss
@@ -1,4 +1,56 @@
 @use "mixin" as *;
+@font-face {
+  font-family: "Noto Sans KR";
+  font-weight: 200;
+  font-style: normal;
+  src: url("../font/NotoSansKR-Thin.woff") format("woff");
+}
+@font-face {
+  font-family: "Noto Sans KR";
+  font-weight: 300;
+  font-style: normal;
+  src: url("../font/NotoSansKR-Light.woff") format("woff");
+}
+@font-face {
+  font-family: "Noto Sans KR";
+  font-weight: 400;
+  font-style: normal;
+  src: url("../font/NotoSansKR-Regular.woff") format("woff");
+}
+@font-face {
+  font-family: "Noto Sans KR";
+  font-weight: 500;
+  font-style: normal;
+  src: url("../font/NotoSansKR-Medium.woff") format("woff");
+}
+@font-face {
+  font-family: "Noto Sans KR";
+  font-weight: 700;
+  font-style: normal;
+  src: url("../font/NotoSansKR-Bold.woff") format("woff");
+}
+@font-face {
+  font-family: "Noto Sans KR";
+  font-weight: 900;
+  font-style: normal;
+  src: url("../font/NotoSansKR-Black.woff") format("woff");
+}
+
+body {
+  font-family: "Noto Sans KR", sans-serif;
+}
+.layout-content {
+  max-width: 1440px;
+  padding: 150px 30px 0 30px;
+  margin: 0 auto;
+  @include breakpoint(notebook) {
+    padding: vw(120 30 0 30, $design-d);
+  }
+  @include breakpoint(mobile) {
+    border-radius: vw(20, $design-m);
+    padding: vw(30 25 0 25, $design-m);
+  }
+}
 
 $target: #fff;
 .descktop {
@@ -71,16 +123,10 @@ $target: #fff;
       letter-spacing: 2px;
       font-size: 65px;
       clip: rect(0px, 70px, 75px, 0px);
-      background: linear-gradient($target, $target 0) no-repeat,
-        linear-gradient(to right, $target, $target 0) no-repeat,
-        linear-gradient(to right, $target, $target 0) bottom left no-repeat,
-        linear-gradient(to right, $target, $target 0) bottom left no-repeat,
-        linear-gradient($target, $target 0) bottom right no-repeat,
-        linear-gradient($target, $target 0) bottom right no-repeat,
-        linear-gradient($target, $target 0) top right no-repeat,
-        linear-gradient($target, $target 0) top right no-repeat;
-      background-size: 10px 2px, 2px 10px, 2px 10px, 10px 2px, 2px 10px,
-        10px 2px, 10px 2px, 2px 10px, 10px 2px;
+      background: linear-gradient($target, $target 0) no-repeat, linear-gradient(to right, $target, $target 0) no-repeat, linear-gradient(to right, $target, $target 0) bottom left no-repeat,
+        linear-gradient(to right, $target, $target 0) bottom left no-repeat, linear-gradient($target, $target 0) bottom right no-repeat, linear-gradient($target, $target 0) bottom right no-repeat,
+        linear-gradient($target, $target 0) top right no-repeat, linear-gradient($target, $target 0) top right no-repeat;
+      background-size: 10px 2px, 2px 10px, 2px 10px, 10px 2px, 2px 10px, 10px 2px, 10px 2px, 2px 10px, 10px 2px;
       color: #e1d4bb;
       padding: 5px;
       transform: translateX(0);
@@ -226,8 +272,9 @@ $target: #fff;
 }
 .slide-section {
   width: 100%;
-  height: 100vh;
+  height: auto;
   overflow-x: hidden;
+  padding-bottom: vw(300, $design-d);
   @include breakpoint(mobile) {
     height: auto;
     padding-bottom: vw(100, $design-m);
@@ -240,8 +287,7 @@ $target: #fff;
     width: 80px;
     border-radius: 10px;
     color: #000;
-    box-shadow: 0px 12px 12px rgba(50, 50, 71, 0.08),
-      0px 16px 24px rgba(50, 50, 71, 0.08);
+    box-shadow: 0px 12px 12px rgba(50, 50, 71, 0.08), 0px 16px 24px rgba(50, 50, 71, 0.08);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -349,7 +395,7 @@ $target: #fff;
     }
     .swiper-button-next.swiper-button-disabled,
     .swiper-button-prev.swiper-button-disabled {
-      opacity: 1;
+      opacity: 0.5;
     }
   }
   &.mobile {
@@ -378,8 +424,10 @@ $target: #fff;
 }
 .about-section {
   width: 100%;
-  height: 100vh;
+  height: auto;
   overflow: hidden;
+  background-color: #fff;
+  padding-bottom: vw(150, $design-d);
   @include breakpoint(mobile) {
     height: auto;
     padding-bottom: vw(100, $design-m);
@@ -388,8 +436,8 @@ $target: #fff;
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
     gap: 30px;
-
     @include breakpoint(mobile) {
       flex-direction: column;
     }
@@ -407,23 +455,27 @@ $target: #fff;
   }
 }
 .about-content-left {
-  padding-left: 20%;
+  align-items: center;
   @include breakpoint(mobile) {
     justify-content: center;
     align-items: center;
   }
   .about-content-left__profile {
-    width: 200px;
-    height: 200px;
+    width: 300px;
+    height: 300px;
     img {
       width: 100%;
       height: 100%;
       border-radius: 50%;
-      border:3px solid #e1d4bb
+      border: 3px solid #e1d4bb;
     }
   }
   .about-content-left__introduction {
-    color: #e1d4bb;
+    color: #537188;
+    text-align: center;
+    font-weight: 500;
+    @include font-size(D, 20px);
+    line-height: 25px;
     @include breakpoint(mobile) {
       @include font-size(M, 12px);
       display: flex;
@@ -438,13 +490,18 @@ $target: #fff;
 
 .about-content-right {
   .about-right__text p {
-    line-height: 20px;
-    color: #e1d4bb;
+    color: #537188;
+    line-height: 25px;
+    @include font-size(D, 18px);
+    @include breakpoint(mobile) {
+      @include font-size(M, 18px);
+    }
   }
   .about-right__title {
-    font-size: 25px;
-    line-height: 30px;
-    color: #fff;
+    font-weight: 700;
+    color: #537188;
+    @include font-size(D, 35px);
+    line-height: 40px;
     @include breakpoint(mobile) {
       @include font-size(M, 18px);
     }
