--- a/src/assets/scss/contents.scss
+++ b/src/assets/scss/contents.scss
@@ -84,10 +84,9 @@ $target: #fff;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  @include breakpoint(notebook) {
-  }
   @include breakpoint(mobile) {
     width: 280px;
+    height: 150px;
   }
   .wrapper {
     position: absolute;
@@ -275,9 +274,11 @@ $target: #fff;
   height: auto;
   overflow-x: hidden;
   padding-bottom: vw(300, $design-d);
+  padding-top: vw(300, $design-d);
   @include breakpoint(mobile) {
     height: auto;
     padding-bottom: vw(100, $design-m);
+    padding-top: vw(100, $design-m);
   }
   .swiper-wrapper {
     position: relative;
@@ -337,9 +338,13 @@ $target: #fff;
   }
   &.descktop {
     .swiper {
-      padding: 20px;
-      width: 70%;
+      width: 1000px;
       height: 580px;
+      @include breakpoint(notebook) {
+        width: vw(1000, $design-d);
+        height: vw(580, $design-d);
+      }
+      padding: 20px;
     }
     .swiper-slide {
       padding-right: 10px;
@@ -349,7 +354,7 @@ $target: #fff;
       justify-content: center;
     }
     .swiper-slide:nth-child(1) {
-      background-image: url(../images/content/slide-img1.jpeg);
+      background-image: url("../images/content/slide-img1.jpeg");
     }
 
     .swiper-slide:nth-child(2n) {
