--- a/src/assets/scss/contents.scss
+++ b/src/assets/scss/contents.scss
@@ -48,7 +48,7 @@ body {
   }
   @include breakpoint(mobile) {
     border-radius: vw(20, $design-m);
-    padding: vw(30 25 0 25, $design-m);
+    padding: vw(100 25 0 25, $design-m);
   }
 }
 
@@ -122,16 +122,10 @@ $target: #fff;
       letter-spacing: 2px;
       font-size: 65px;
       clip: rect(0px, 70px, 75px, 0px);
-      background: linear-gradient($target, $target 0) no-repeat,
-        linear-gradient(to right, $target, $target 0) no-repeat,
-        linear-gradient(to right, $target, $target 0) bottom left no-repeat,
-        linear-gradient(to right, $target, $target 0) bottom left no-repeat,
-        linear-gradient($target, $target 0) bottom right no-repeat,
-        linear-gradient($target, $target 0) bottom right no-repeat,
-        linear-gradient($target, $target 0) top right no-repeat,
-        linear-gradient($target, $target 0) top right no-repeat;
-      background-size: 10px 2px, 2px 10px, 2px 10px, 10px 2px, 2px 10px,
-        10px 2px, 10px 2px, 2px 10px, 10px 2px;
+      background: linear-gradient($target, $target 0) no-repeat, linear-gradient(to right, $target, $target 0) no-repeat, linear-gradient(to right, $target, $target 0) bottom left no-repeat,
+        linear-gradient(to right, $target, $target 0) bottom left no-repeat, linear-gradient($target, $target 0) bottom right no-repeat, linear-gradient($target, $target 0) bottom right no-repeat,
+        linear-gradient($target, $target 0) top right no-repeat, linear-gradient($target, $target 0) top right no-repeat;
+      background-size: 10px 2px, 2px 10px, 2px 10px, 10px 2px, 2px 10px, 10px 2px, 10px 2px, 2px 10px, 10px 2px;
       color: #e1d4bb;
       padding: 5px;
       transform: translateX(0);
@@ -283,8 +277,8 @@ $target: #fff;
   padding-top: vw(300, $design-d);
   @include breakpoint(mobile) {
     height: auto;
+    padding-top: 0;
     padding-bottom: vw(100, $design-m);
-    padding-top: vw(100, $design-m);
   }
   .swiper-wrapper {
     position: relative;
@@ -294,8 +288,7 @@ $target: #fff;
     width: 80px;
     border-radius: 10px;
     color: #000;
-    box-shadow: 0px 12px 12px rgba(50, 50, 71, 0.08),
-      0px 16px 24px rgba(50, 50, 71, 0.08);
+    box-shadow: 0px 12px 12px rgba(50, 50, 71, 0.08), 0px 16px 24px rgba(50, 50, 71, 0.08);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -416,8 +409,10 @@ $target: #fff;
       height: vw(400, $design-m);
     }
     .slide-image {
+      width: 100%;
       height: 100%;
       img {
+        width: 100%;
         height: 100%;
       }
     }
@@ -449,9 +444,10 @@ $target: #fff;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 30px;
+    gap: vw(30, $design-d);
     @include breakpoint(mobile) {
       flex-direction: column;
+      gap: vw(30, $design-m);
     }
     .about-content {
       width: 100%;
@@ -461,61 +457,67 @@ $target: #fff;
         padding-right: 10%;
         display: flex;
         flex-direction: column;
-        gap: 40px;
+        gap: vw(40, $design-d);
+        @include breakpoint(mobile) {
+          padding-right: 0;
+        }
       }
-    }
-  }
-}
-.about-content-left {
-  align-items: center;
-  @include breakpoint(mobile) {
-    justify-content: center;
-    align-items: center;
-  }
-  .about-content-left__profile {
-    width: 300px;
-    height: 300px;
-    img {
-      width: 100%;
-      height: 100%;
-      border-radius: 50%;
-      border: 3px solid #e1d4bb;
-    }
-  }
-  .about-content-left__introduction {
-    color: #537188;
-    text-align: center;
-    font-weight: 500;
-    @include font-size(D, 20px);
-    line-height: 25px;
-    @include breakpoint(mobile) {
-      @include font-size(M, 12px);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-wrap: nowrap;
-      text-align: center;
-      padding-bottom: 100px;
-    }
-  }
-}
-
-.about-content-right {
-  .about-right__text p {
-    color: #537188;
-    line-height: 25px;
-    @include font-size(D, 18px);
-    @include breakpoint(mobile) {
-      @include font-size(M, 13px);
-    }
-  }
-  .about-right__title {
-    font-weight: 700;
-    color: #537188;
-    @include font-size(D, 35px);
-    line-height: 40px;
-    @include breakpoint(mobile) {
-      @include font-size(M, 18px);
+      .about-content-left {
+        align-items: center;
+        @include breakpoint(mobile) {
+          justify-content: center;
+          align-items: center;
+        }
+        .about-content-left__profile {
+          width: 300px;
+          height: 300px;
+          img {
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            border: 3px solid #e1d4bb;
+          }
+        }
+        .about-content-left__introduction {
+          color: #537188;
+          text-align: center;
+          font-weight: 500;
+          @include font-size(D, 20px);
+          line-height: 25px;
+        }
+      }
+      .about-content-right {
+        @include breakpoint(mobile) {
+          gap: vw(20, $design-m);
+        }
+        .about-right__text p {
+          color: #537188;
+          font-size: 20px;
+          line-height: 25px;
+          @include breakpoint(notebook) {
+            @include font-size(D, 20px);
+            line-height: vw(25, $design-d);
+          }
+          @include breakpoint(mobile) {
+            @include font-size(M, 15px);
+            line-height: vw(20, $design-m);
+          }
+        }
+        .about-right__title {
+          font-weight: 700;
+          color: #537188;
+          font-size: 35px;
+          line-height: 40px;
+          @include breakpoint(notebook) {
+            @include font-size(D, 35px);
+            line-height: vw(40, $design-d);
+          }
+          @include breakpoint(mobile) {
+            @include font-size(M, 20px);
+            line-height: vw(22, $design-m);
+          }
+        }
+      }
     }
   }
 }
