--- a/src/assets/scss/contents.scss
+++ b/src/assets/scss/contents.scss
@@ -122,10 +122,16 @@ $target: #fff;
       letter-spacing: 2px;
       font-size: 65px;
       clip: rect(0px, 70px, 75px, 0px);
-      background: linear-gradient($target, $target 0) no-repeat, linear-gradient(to right, $target, $target 0) no-repeat, linear-gradient(to right, $target, $target 0) bottom left no-repeat,
-        linear-gradient(to right, $target, $target 0) bottom left no-repeat, linear-gradient($target, $target 0) bottom right no-repeat, linear-gradient($target, $target 0) bottom right no-repeat,
-        linear-gradient($target, $target 0) top right no-repeat, linear-gradient($target, $target 0) top right no-repeat;
-      background-size: 10px 2px, 2px 10px, 2px 10px, 10px 2px, 2px 10px, 10px 2px, 10px 2px, 2px 10px, 10px 2px;
+      background: linear-gradient($target, $target 0) no-repeat,
+        linear-gradient(to right, $target, $target 0) no-repeat,
+        linear-gradient(to right, $target, $target 0) bottom left no-repeat,
+        linear-gradient(to right, $target, $target 0) bottom left no-repeat,
+        linear-gradient($target, $target 0) bottom right no-repeat,
+        linear-gradient($target, $target 0) bottom right no-repeat,
+        linear-gradient($target, $target 0) top right no-repeat,
+        linear-gradient($target, $target 0) top right no-repeat;
+      background-size: 10px 2px, 2px 10px, 2px 10px, 10px 2px, 2px 10px,
+        10px 2px, 10px 2px, 2px 10px, 10px 2px;
       color: #e1d4bb;
       padding: 5px;
       transform: translateX(0);
@@ -288,7 +294,8 @@ $target: #fff;
     width: 80px;
     border-radius: 10px;
     color: #000;
-    box-shadow: 0px 12px 12px rgba(50, 50, 71, 0.08), 0px 16px 24px rgba(50, 50, 71, 0.08);
+    box-shadow: 0px 12px 12px rgba(50, 50, 71, 0.08),
+      0px 16px 24px rgba(50, 50, 71, 0.08);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -607,6 +614,9 @@ $target: #fff;
       @include breakpoint(mobile) {
         padding-right: 0;
       }
+    }
+    .fa-angle-right {
+      color: #005db5;
     }
     .title {
       border: 2px solid #e1d4bb;
