--- a/src/assets/scss/contents.scss
+++ b/src/assets/scss/contents.scss
@@ -122,16 +122,10 @@ $target: #fff;
       letter-spacing: 2px;
       font-size: 65px;
       clip: rect(0px, 70px, 75px, 0px);
-      background: linear-gradient($target, $target 0) no-repeat,
-        linear-gradient(to right, $target, $target 0) no-repeat,
-        linear-gradient(to right, $target, $target 0) bottom left no-repeat,
-        linear-gradient(to right, $target, $target 0) bottom left no-repeat,
-        linear-gradient($target, $target 0) bottom right no-repeat,
-        linear-gradient($target, $target 0) bottom right no-repeat,
-        linear-gradient($target, $target 0) top right no-repeat,
-        linear-gradient($target, $target 0) top right no-repeat;
-      background-size: 10px 2px, 2px 10px, 2px 10px, 10px 2px, 2px 10px,
-        10px 2px, 10px 2px, 2px 10px, 10px 2px;
+      background: linear-gradient($target, $target 0) no-repeat, linear-gradient(to right, $target, $target 0) no-repeat, linear-gradient(to right, $target, $target 0) bottom left no-repeat,
+        linear-gradient(to right, $target, $target 0) bottom left no-repeat, linear-gradient($target, $target 0) bottom right no-repeat, linear-gradient($target, $target 0) bottom right no-repeat,
+        linear-gradient($target, $target 0) top right no-repeat, linear-gradient($target, $target 0) top right no-repeat;
+      background-size: 10px 2px, 2px 10px, 2px 10px, 10px 2px, 2px 10px, 10px 2px, 10px 2px, 2px 10px, 10px 2px;
       color: #e1d4bb;
       padding: 5px;
       transform: translateX(0);
@@ -294,8 +288,7 @@ $target: #fff;
     width: 80px;
     border-radius: 10px;
     color: #000;
-    box-shadow: 0px 12px 12px rgba(50, 50, 71, 0.08),
-      0px 16px 24px rgba(50, 50, 71, 0.08);
+    box-shadow: 0px 12px 12px rgba(50, 50, 71, 0.08), 0px 16px 24px rgba(50, 50, 71, 0.08);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -454,7 +447,7 @@ $target: #fff;
     gap: vw(30, $design-d);
     @include breakpoint(mobile) {
       flex-direction: column;
-      gap: vw(30, $design-m);
+      gap: vw(50, $design-m);
     }
     .about-content {
       width: 100%;
@@ -476,8 +469,16 @@ $target: #fff;
           align-items: center;
         }
         .about-content-left__profile {
-          width: 300px;
-          height: 300px;
+          width: 400px;
+          height: 400px;
+          @include breakpoint(notebook) {
+            width: vw(400, $design-d);
+            height: vw(400, $design-d);
+          }
+          @include breakpoint(mobile) {
+            width: vw(200, $design-m);
+            height: vw(200, $design-m);
+          }
           img {
             width: 100%;
             height: 100%;
@@ -500,10 +501,10 @@ $target: #fff;
         .about-right__text p {
           color: #537188;
           font-size: 20px;
-          line-height: 25px;
+          line-height: 30px;
           @include breakpoint(notebook) {
             @include font-size(D, 20px);
-            line-height: vw(25, $design-d);
+            line-height: vw(30, $design-d);
           }
           @include breakpoint(mobile) {
             @include font-size(M, 15px);
@@ -559,9 +560,9 @@ $target: #fff;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 50px;
+    gap: 80px;
     @include breakpoint(notebook) {
-      padding: vw(50, $design-d);
+      padding: vw(100 0, $design-d);
     }
     @include breakpoint(mobile) {
       padding: vw(50, $design-m);
@@ -649,7 +650,7 @@ $target: #fff;
       }
     }
     .desc {
-      padding: 0 10px 10px 10px;
+      padding: 0 10px 30px 10px;
       display: none;
       font-size: 18px;
       line-height: 30px;
