--- a/src/assets/scss/contents.scss
+++ b/src/assets/scss/contents.scss
@@ -354,23 +354,23 @@ $target: #fff;
       justify-content: center;
     }
     .swiper-slide:nth-child(1) {
-      background-image: url("./assets/images/content/slide-img1.jpeg");
+      background-image: url("../images/content/slide-img1.jpeg");
     }
 
     .swiper-slide:nth-child(2n) {
-      background-image: url("./assets/images/content/slide-img2.jpg");
+      background-image: url("../images/content/slide-img2.jpg");
     }
 
     .swiper-slide:nth-child(3n) {
-      background-image: url("./assets/images/content/slide-img3.jpg");
+      background-image: url("../images/content/slide-img3.jpg");
     }
 
     .swiper-slide:nth-child(4n) {
-      background-image: url("./assets/images/content/slide-img4.jpg");
+      background-image: url("../images/content/slide-img4.jpg");
     }
 
     .swiper-slide:nth-child(5n) {
-      background-image: url("./assets/images/content/slide-img5.jpeg");
+      background-image: url("../images/content/slide-img5.jpeg");
     }
 
     .swiper-button-container {
