--- a/src/assets/scss/contents.scss
+++ b/src/assets/scss/contents.scss
@@ -683,6 +683,29 @@ $target: #fff;
       gap: vw(10, $design-d);
       width: vw(2230, $design-d);
     }
+
+    .gallery-title{
+      >a{
+        position: relative;
+        display: block;
+        height: 100%;
+        color: #fff;
+        font-size: 60px;
+        font-weight: 700;
+        &::after {
+          content: "gallery";
+          position: absolute;
+          display: block;
+          width: 100%;
+          top: 10px;
+          left: 10px;
+          color: #537188;
+          text-shadow: -1px 0 #fff, 1px 0 #fff, 0 -1px #fff, 0 1px #fff;
+          opacity: 0.3;
+          z-index: -1;
+        }
+      }
+    }
   }
 }
 
@@ -693,14 +716,14 @@ $target: #fff;
   padding-bottom: 300px;
   .work-content-title {
     text-align: center;
-    padding: 20px 0 100px 0;
+    padding: 20px 0 150px 0;
     a {
       position: relative;
       display: block;
       width: 100%;
       height: 100%;
       color: #fff;
-      font-size: 80px;
+      font-size: 60px;
       font-weight: 700;
       z-index: 1;
       &::after {
@@ -721,41 +744,117 @@ $target: #fff;
     display: flex;
     flex-direction: row;
     .work-content-left {
+      position:relative;
       width: 50%;
-      height: auto;
+      height:350px;
+      border: 5px solid rgba(0,0,0,0.09);
+      overflow: hidden;
       img {
-        width: 100%;
-        margin-bottom: 50px;
-        background-color: salmon;
+        width:100%;
+        height: auto;
+        position: absolute; /* 이미
+        지를 절대적으로 위치시킴 */
+        top: 0; /* 초기 위치를 화면 상단에 설정 */
+        left: 0; /* 초기 위치를 화면 좌측에 설정 */
+        bottom: 0; /* 이미지의 아래쪽을 컨테이너 하단에 맞춤 */
+        transition: top 4s ease-in-out; /* 부드러운 이동을 위한 트랜지션 효과 */
+        &:hover{
+          top: -1261px;
+        }
       }
     }
+    
     .work-content-right {
       width: 50%;
-      padding: 0 100px 0 100px;
+      padding-left: 100px;
       color: #fff;
       .work_subtit {
         a {
           display: block;
           color: #fff;
-          font-size: 40px;
-          font-weight: 600;
-          padding: 20px 0;
-        }
-      }
-      .work_keyword {
-        font-size: 18px;
-        margin-bottom: 10px;
-        mark {
-          background-color: #e1d4bb;
+          font-size: 30px;
+          font-weight: 400;
+          padding-bottom: 50px;
         }
       }
       .txt {
         font-weight: 300;
-        line-height: 20px;
+        line-height: 25px;
+        margin-bottom: 30px;
+      }
+      .btn-1{
+        display: inline-block;
+        position: relative;
+        background: none;
+        border: none;
+        color: #fff;
+        font-size: 18px;
+        cursor: pointer;
+        background: rgba(0,0,0,0.09);
+        span{
+          display: block;
+          padding: 15px 40px;
+        }
       }
     }
-  }
+  } 
 }
+
+button::before, 
+button::after{
+  content:"";
+  width: 0;
+  height: 2px;
+  position: absolute;
+  transition: all 0.2s linear;
+  background: #fff;
+}
+
+span::before, span::after{
+  content:"";
+  width:2px;
+  height:0;
+  position: absolute;
+  transition: all 0.2s linear;
+  background: #fff;
+}
+button:hover::before, button:hover::after{
+  width: 100%;
+}
+button:hover span::before, button:hover span::after{
+  height: 100%;
+}
+/*----- button 1 -----*/
+.btn-1::before, .btn-1::after{
+  transition-delay: 0.2s;
+}
+.btn-1 span::before, .btn-1 span::after{
+  transition-delay: 0s;
+}
+.btn-1::before{
+  right: 0;
+  top: 0;
+}
+.btn-1::after{
+  left: 0;
+  bottom: 0;
+}
+.btn-1 span::before{
+  left: 0;
+  top: 0;
+}
+.btn-1 span::after{
+  right: 0;
+  bottom: 0;
+}
+.btn-1:hover::before, .btn-1:hover::after{
+  transition-delay: 0s;
+}
+.btn-1:hover span::before, .btn-1:hover span::after{
+  transition-delay: 0.2s;
+}
+
+
 
 .portfolio {
   padding-bottom: 300px;
